--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>  
 <html>  
 <head>  
-  <title>电子相册</title>  
+  <title>阿月的山风</title>  
   <style>  
     body {  
       font-family: Arial, sans-serif;  
@@ -45,7 +45,7 @@
   <script>  
     function validatePassword() {  
       var password = document.getElementById('password').value;  
-      if (password === 'your_password') { // 这里替换为您的密码  
+      if (password === '000116') { // 这里替换为您的密码  
         document.getElementById('uploadForm').style.display = 'block'; // 显示上传表单  
       } else {  
         alert('密码错误！'); // 密码错误提示信息，可以替换为其他处理方式，如重新输入密码等。  
